@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.30 2003/04/02 13:17:59 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.31 2003/04/26 17:19:41 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -547,7 +547,7 @@ SendBrowseList(void)
       {
         LogMessage(L_INFO, "Remote destination \"%s\" has timed out; deleting it...",
 	           p->name);
-        DeletePrinter(p);
+        DeletePrinter(p, 1);
       }
     }
     else if (p->browse_time < ut && count > 0 &&
@@ -1929,5 +1929,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.30 2003/04/02 13:17:59 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.31 2003/04/26 17:19:41 mike Exp $".
  */
