@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.65 2003/04/25 15:30:20 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.66 2003/04/26 17:19:42 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -676,7 +676,7 @@ add_class(client_t        *con,		/* I - Client connection */
       SortPrinters();
     }
     else
-      DeletePrinter(pclass);
+      DeletePrinter(pclass, 1);
 
    /*
     * Add the class as a new local class...
@@ -1103,7 +1103,7 @@ add_printer(client_t        *con,	/* I - Client connection */
       SortPrinters();
     }
     else
-      DeletePrinter(printer);
+      DeletePrinter(printer, 1);
 
    /*
     * Add the printer as a new local printer...
@@ -3242,7 +3242,7 @@ delete_printer(client_t        *con,	/* I - Client connection */
     LogMessage(L_INFO, "Class \'%s\' deleted by \'%s\'.", dest,
                con->username);
 
-    DeletePrinter(printer);
+    DeletePrinter(printer, 0);
     SaveAllClasses();
   }
   else
@@ -3250,7 +3250,7 @@ delete_printer(client_t        *con,	/* I - Client connection */
     LogMessage(L_INFO, "Printer \'%s\' deleted by \'%s\'.", dest,
                con->username);
 
-    DeletePrinter(printer);
+    DeletePrinter(printer, 0);
     SaveAllPrinters();
   }
 
@@ -6621,5 +6621,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.65 2003/04/25 15:30:20 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.66 2003/04/26 17:19:42 mike Exp $".
  */
